--- a/manage/manage_texts.yaml
+++ b/manage/manage_texts.yaml
@@ -8,12 +8,12 @@ output-texts:
     success-approver: "The following metadata for threat model with ID '{{ ID }}' was submitted, it is not approved until the changes are merged to the official record"
     success-submitter: "The following metadata for threat model with ID '{{ ID }}' was submitted, please let an approver know"
     empty-id: "The threat model at this location has an empty ID.  Please populate the ID field and re-submit"
-    no-ID-in-metadata: "No ID was found in the metadata for a threat model with scheme '{{ scheme }}' and location '{{ location }}'.  Please ensure you invoke 'create' on your threat model before you submit it, and the 'create' is approved"
-    model-and-metadata-ID-mismatch: "The ID value in the threat model does not match the ID value in the metadata for the registered scheme and location"
+    no-ID-in-metadata: "No ID was found in the metadata for a threat model with location '{{ location }}'.  Please ensure you invoke 'create' on your threat model before you submit it, and the 'create' is approved"
+    model-and-metadata-ID-mismatch: "The ID value in the threat model ('{{ current_ID }}') does not match the ID value in the metadata ('{{ metadata_ID }}') for the registered scheme and location"
     no-version-history: "Could not find entry in version history table for threat model current version '{{ current_version }}'"
     no-index-ID: "Could not find metadata index entry for ID '{{ ID }}'.  Valid IDs must exist in the metadata index file.  New IDs can be created using manage.create"
-    index-entry-exists: "Cannot create ID for threat model with scheme '{{ scheme }}' and location '{{ location }}' as that scheme/location is used by threat model with ID '{{ ID }}'"
-    index-entry-exists-create: "Cannot create ID for threat model with scheme '{{ scheme }}' and location '{{ location }}' as that scheme/location is used by threat model with ID '{{ ID }}', but that ID allocation has not yet been approved"
+    index-entry-exists: "Cannot create ID for threat model with location '{{ location }}' as that location is used by threat model with ID '{{ ID }}'"
+    index-entry-exists-create: "Cannot create ID for threat model with location '{{ location }}' as that location is used by threat model with ID '{{ ID }}', but that ID allocation has not yet been approved"
     cant-submit-not-in-metadata-index: "The threat model with ID '{{ ID }}' that you are trying to submit does not exist in the metadata.  Please call the 'manage.create' action and ensure the updates are merged."
     current-approved-mismatched-version: "The submitted threat model with ID '{{ ID }}' has a current version of '{{ current_version }}' and an approved version of '{{ approved_version }}', both of which are approved in the version history, but if the current version is approved in the version history then the approved version must match the current version.  Please update the approved version in the threat model"
     cant-update-approved-version: "The submitted threat model with ID '{{ ID }}' has a current and approved version of '{{ approved_version }}' which is the same as the currently approved version for this threat model.  Updating approved versions of threat models is not supported.  Please increase the version of the threat model"
