--- a/schemes/confluence-scheme-1.0.yaml
+++ b/schemes/confluence-scheme-1.0.yaml
@@ -254,6 +254,7 @@ scheme:
                 section: Components Detail Table
                 tags:
                   - components-details-data
+                  - cov/covered=cov-authnz/name/component_in_scope
               value:
                 get-data:
                   query:
@@ -308,6 +309,7 @@ scheme:
                 section: "Component AuthN and AuthZ Table"
                 tags:
                   - components-access-control-data
+                  - cov/covering=cov-authnz/threat-component
               value:
                 get-data:
                   query:
