Added new validator, and updated schemes, to check authn/z table coverage

--- a/validators/validators_dispatch.yaml
+++ b/validators/validators_dispatch.yaml
@@ -6,3 +6,4 @@ validators:
   regex: "validators.regex"
   date: "validators.date"
   template: "validators.template"
+  exists: "validators.exists"
