--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-auth==2.6.2
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
 googleapis-common-protos==1.56.0
+html-table-extractor==1.4.1
 html-table-parser-python3==0.2.0
 httplib2==0.20.4
 idna==3.3
