--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.10.0
 boto3==1.21.30
 botocore==1.24.30
 cachetools==5.0.0
-certifi==2023.7.22
+certifi>=2024.07.04
 charset-normalizer==2.0.12
 cssselect==1.1.0
 Deprecated==1.2.13
@@ -17,9 +17,9 @@ googleapis-common-protos==1.56.0
 html-table-extractor==1.4.1
 html-table-parser-python3==0.2.0
 httplib2==0.20.4
-idna==3.3
+idna>=3.7
 iniconfig==1.1.1
-Jinja2==3.1.3
+Jinja2>=3.1.4
 jmespath==1.0.0
 jsonpickle==2.1.0
 lxml==4.9.1
@@ -35,7 +35,7 @@ pyparsing==3.0.7
 pyquery==1.4.3
 pytest==7.1.1
 python-dateutil==2.8.2
-requests==2.31.0
+requests>=2.32.0
 requests-oauthlib==1.3.1
 rsa==4.8
 ruamel.yaml==0.17.21
@@ -47,5 +47,5 @@ soupsieve==2.3.1
 toml==0.10.2
 tomli==2.0.1
 uritemplate==4.1.1
-urllib3==1.26.18
+urllib3>=1.26.19
 wrapt==1.14.0
