--- a/verifiers/verifiers_config.yaml
+++ b/verifiers/verifiers_config.yaml
@@ -89,6 +89,7 @@ verifiers-config:
               value-tag: "threat-component"
         issue-text-key: conditional-mandatory-exists
         fix-text-key: conditional-mandatory-exists-fix
+        issue-location: if
         issue-table-tag: "components-access-control-data"       # When there's an error, use the table with this tag
         issue-table-row:                                        # When there's an error, leaving this blank means no (row) location is shown
         issue-table-col-tag: "threat-component"                 # When there's an error, the 'issue_table_col' value used in templates has this tag in teh 'issue_table' table
