--- a/verifiers/verifiers_texts.yaml
+++ b/verifiers/verifiers_texts.yaml
@@ -2,13 +2,31 @@
 output-texts:
   default:
     success-no-issues: "The threat model verified with no issues"
-    error-issues: "The threat model is not valid"
+    error-issues: 
+      default: "The threat model is not valid"
+      html: "<p>The threat model is not valid.</p><p>Please see the highlighted parts of the threat model and mouse over them for a description of the errors.</p>"
     warn-info-issues: "The threat model verified, but with some potential issues"
     location-text: "In {{ issue_table }}"
     entry-text: "Where '{{ issue_key.rowID.colname }}' column has value '{{ issue_key.rowID.value }}'"
     no-covering-threat: "No threat was found in the '{{ threats_and_controls_table }}' that covered the asset '{{ issue_key.value }}' (from the '{{ issue_key.table }}') when stored in location '{{ storage_location }}'."
-    no-covering-threat-fix: "The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; the asset name i.e. '{{ issue_key.value }}', the asset category i.e. '{{ issue_key.row.category.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
-    no-covering-threat-fix-no-threat-or-asset: "The {{ threats_and_controls_table }} must include a row with one of; the asset name i.e. '{{ issue_key.value }}', the asset category i.e. '{{ issue_key.row.category.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
+    no-covering-threat-fix: 
+      default: "The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; the asset name i.e. '{{ issue_key.value }}', the asset category i.e. '{{ issue_key.row.category.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
+      html: |
+        The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; 
+        <ul>
+        <li>the asset name i.e. '{{ issue_key.value }}',</li>
+        <li>the asset category i.e. '{{ issue_key.row.category.value }}', or<\li>
+        <li>text referencing (see fix data) the storage location i.e. '{{ storage_location }}'</li>
+        </ul>
+    no-covering-threat-fix-no-threat-or-asset: 
+      default: "The {{ threats_and_controls_table }} must include a row with one of; the asset name i.e. '{{ issue_key.value }}', the asset category i.e. '{{ issue_key.row.category.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
+      html: |
+        The {{ threats_and_controls_table }} must include a row with one of; 
+        <ul>
+        <li>the asset name i.e. '{{ issue_key.value }}',</li>
+        <li>the asset category i.e. '{{ issue_key.row.category.value }}', or</li>
+        <li>text referencing (see fix data) the storage location i.e. '{{ storage_location }}'</li>
+        </ul>
     missing-mandatory: "A value for the column '{{ issue_key.colname }}' is mandatory"
     conditional-mandatory: "The value for the field '{{ if_key.colname }}' is '{{ if_key.value }}', so a value for the field '{{ then_key.colname }}' is mandatory"
     conditional-mandatory-any-value: "A value for the field '{{ if_key.colname }}' exists, so a value for the field '{{ then_key.colname }}' is mandatory"
